apps/base/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
